Fixed .nav z-index.

--- a/hettyversion/static/style.css
+++ b/hettyversion/static/style.css
@@ -24,6 +24,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
 }
 
 #content {
